[package]
name = "cross_chain_merkle_proof"
version = "0.1.0"
authors = ["Your Name <your.email@example.com>"]
edition = "2018"
description = "A project demonstrating cross-chain Merkle proof verification."
license = "MIT"

# Add dependencies for external crates
[dependencies]
sha2 = "0.9" # Used for hashing (SHA-256)
