[package]
name = "cross_chain_merkle_proof"
version = "0.1.0"
authors = ["Your Name <your.email@example.com>"]
edition = "2018"
description = "A project demonstrating cross-chain Merkle proof verification."
license = "MIT"

# Dependencies
[dependencies]
sha2 = "0.9"        # SHA-256 hashing library
tokio = { version = "1", features = ["full"] }
warp = "0.3"        # Warp for REST API
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
